[tool.poetry]
name = "github10-1"
version = "0.1.0"
description = ""
authors = ["Виктор Манаков <manackov.vitek@gmail.com>"]
readme = "README.md"
packages = [{include = "github10"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
